# tracking_fusion_evaluation_lab

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md
.github/workflows/: ci.yml
assets/datasets/: README.md  crowded_crossing.csv  harbor_patrol.csv  intersection_conflict.csv  urban_convoy.csv
config/: aggressive.cfg  balanced.cfg  conservative.cfg  crowded_scene.cfg  fusion_balanced.cfg
docs/: architecture.md  benchmark_playbook.md  config_reference.md  decision_log.md  evaluation_methodology.md  interview_talking_points.md  roadmap.md  use_cases.md
scripts/: run_demo.sh
src/apps/: benchmark_main.cpp  compare_configs_main.cpp  replay_export_main.cpp  run_tracker_main.cpp  scenario_sweep_main.cpp
src/association/: Gating.cpp  Gating.h  GlobalGreedyAssociator.cpp  GlobalGreedyAssociator.h  HungarianAssociator.cpp  HungarianAssociator.h  NearestNeighborAssociator.cpp  NearestNeighborAssociator.h
src/core/: Track.cpp  Track.h  TrackManager.cpp  TrackManager.h  TrackingEngine.cpp  TrackingEngine.h  Types.cpp  Types.h
src/filter/: LinearTracker2D.cpp  LinearTracker2D.h
src/fusion/: SensorNormalizer.cpp  SensorNormalizer.h
src/io/: Config.cpp  Config.h  CsvDatasetReader.cpp  CsvDatasetReader.h  TrackWriter.cpp  TrackWriter.h
src/reporting/: MarkdownReport.cpp  MarkdownReport.h  Metrics.cpp  Metrics.h
tests/: association_regression_test.cpp  smoke_test.cpp
